-u fragment_login - change resource id
부적절한 리소스 id 수정.

--- a/client/app/src/main/res/layout/fragment_login.xml
+++ b/client/app/src/main/res/layout/fragment_login.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/tv_login_prev"
+            android:id="@+id/btn_login_prev"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="32dp"
             android:layout_height="18dp"
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/tv_login_submit"
+            android:id="@+id/btn_login_submit"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="46dp"
             android:layout_height="20dp"
@@ -62,7 +62,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/iv_login_menu"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:src="@drawable/preloader_logo1_1024x1024" />
