--- a/client/app/src/main/res/layout/activity_login.xml
+++ b/client/app/src/main/res/layout/activity_login.xml
@@ -6,193 +6,181 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/login_menu"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <Button
-            android:id="@+id/btn_login_prev"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="32dp"
-            android:layout_height="18dp"
-            android:layout_marginStart="20dp"
-            android:background="#00FFFFFF"
-            android:text="prev"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/btn_login_submit"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="46dp"
-            android:layout_height="20dp"
-            android:layout_marginRight="20dp"
-            android:background="#00FFFFFF"
-            android:text="submit"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@android:color/holo_blue_dark"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/login_header"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_menu">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/iv_login_menu"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/preloader_logo1_1024x1024" />
-
-            <TextView
-                android:id="@+id/tv_login_header_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:gravity="center"
-                android:text="Login"
-                android:textColor="#333"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <LinearLayout
-        android:id="@+id/login_body"
-        android:layout_width="0dp"
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_login_left"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_header"
-        tools:context=".fragment.LoginFragment">
+        app:layout_constraintGuide_begin="20dp" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_login_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="20dp" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="id"
-            app:errorEnabled="false"
-            app:helperTextEnabled="false"
-            app:hintAnimationEnabled="true"
-            app:hintEnabled="true"
-            tools:layout_conversion_absoluteHeight="56dp"
-            tools:layout_conversion_absoluteWidth="411dp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp">
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_login_top"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="12dp" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tiet_login_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                tools:layout_conversion_absoluteHeight="45dp"
-                tools:layout_conversion_absoluteWidth="411dp"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="11dp" />
-        </com.google.android.material.textfield.TextInputLayout>
+    <Button
+        android:id="@+id/btn_login_prev"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="32dp"
+        android:layout_height="18dp"
+        android:background="#00FFFFFF"
+        android:text="prev"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintStart_toStartOf="@+id/guideline_login_left"
+        app:layout_constraintTop_toTopOf="@+id/guideline_login_top" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="password"
-            app:errorEnabled="false"
-            app:helperTextEnabled="false"
-            app:hintAnimationEnabled="true"
-            app:hintEnabled="true"
-            tools:layout_conversion_absoluteHeight="56dp"
-            tools:layout_conversion_absoluteWidth="411dp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="56dp">
+    <Button
+        android:id="@+id/btn_login_submit"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="46dp"
+        android:layout_height="20dp"
+        android:background="#00FFFFFF"
+        android:text="submit"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@android:color/holo_blue_dark"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_login_right"
+        app:layout_constraintTop_toTopOf="@+id/guideline_login_top" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/tiet_login_pw"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:singleLine="true"
-                tools:layout_conversion_absoluteHeight="45dp"
-                tools:layout_conversion_absoluteWidth="411dp"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="68dp" />
-        </com.google.android.material.textfield.TextInputLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_login_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="60dp" />
 
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/iv_login_menu"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="2dp"
+        android:src="@drawable/preloader_logo1_1024x1024"
+        app:layout_constraintStart_toStartOf="@+id/guideline_login_left"
+        app:layout_constraintTop_toTopOf="@+id/guideline_login_header" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/login_footer"
+    <TextView
+        android:id="@+id/tv_login_header_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:gravity="center"
+        android:text="Login"
+        android:textColor="#333"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/iv_login_menu"
+        app:layout_constraintTop_toTopOf="@+id/guideline_login_header" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_login_body"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="140dp" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:hint="id"
+        app:errorEnabled="false"
+        app:helperTextEnabled="false"
+        app:hintAnimationEnabled="true"
+        app:hintEnabled="true"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_login_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_login_left"
+        app:layout_constraintTop_toTopOf="@+id/guideline_login_body"
+        tools:layout_conversion_absoluteHeight="56dp"
+        tools:layout_conversion_absoluteWidth="411dp">
 
-        <Button
-            android:id="@+id/btn_login_go_signup"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="46dp"
-            android:layout_height="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginBottom="14dp"
-            android:background="#00FFFFFF"
-            android:text="sign up"
-            android:textAllCaps="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textColor="@android:color/holo_blue_dark"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_login_footer_text"
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tiet_login_id"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:text="아직 회원이 아니세요? "
-            android:textColor="@android:color/secondary_text_dark"
-            android:textSize="10sp"
-            app:layout_constraintBottom_toTopOf="@+id/btn_login_go_signup"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:inputType="text"
+            android:textSize="14sp"
+            tools:layout_conversion_absoluteHeight="45dp"
+            tools:layout_conversion_absoluteWidth="411dp"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="11dp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/btn_login_preview"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="46dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="14dp"
-            android:background="#00FFFFFF"
-            android:text="preview"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="password"
+        app:errorEnabled="false"
+        app:helperTextEnabled="false"
+        app:hintAnimationEnabled="true"
+        app:hintEnabled="true"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_login_right"
+        app:layout_constraintStart_toStartOf="@+id/guideline_login_left"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        tools:layout_conversion_absoluteHeight="56dp"
+        tools:layout_conversion_absoluteWidth="411dp">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tiet_login_pw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:singleLine="true"
+            android:textSize="14sp"
+            tools:layout_conversion_absoluteHeight="45dp"
+            tools:layout_conversion_absoluteWidth="411dp"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="68dp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_login_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="12dp" />
+
+    <Button
+        android:id="@+id/btn_login_go_signup"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="46dp"
+        android:layout_height="20dp"
+        android:background="#00FFFFFF"
+        android:text="sign up"
+        android:textAllCaps="false"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline_login_bottom"
+        app:layout_constraintStart_toStartOf="@+id/guideline_login_left" />
+
+    <TextView
+        android:id="@+id/tv_login_footer_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="아직 회원이 아니세요? "
+        android:textColor="@android:color/secondary_text_dark"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_login_go_signup"
+        app:layout_constraintStart_toStartOf="@+id/guideline_login_left" />
+
+    <Button
+        android:id="@+id/btn_login_preview"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="46dp"
+        android:layout_height="20dp"
+        android:background="#00FFFFFF"
+        android:text="preView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline_login_bottom"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_login_right" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
