--- a/client/app/src/main/res/navigation/nav_graph_user_account.xml
+++ b/client/app/src/main/res/navigation/nav_graph_user_account.xml
@@ -19,7 +19,11 @@
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/action_loginFragment_to_nav_graph_home"
-            app:destination="@id/nav_graph_home" />
+            app:destination="@id/nav_graph_home"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
