--- a/client/app/src/main/res/values/styles.xml
+++ b/client/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MyHintStyle" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">#FFC400</item>
+        <item name="android:textSize">10sp</item>
+    </style>
+
+    <style name="MyEditTextStyle" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorAccent">#FFC400</item>
+    </style>
+
 </resources>
