--- a/client/app/src/main/res/layout/fragment_login.xml
+++ b/client/app/src/main/res/layout/fragment_login.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.LoginFragment">
 
     <androidx.constraintlayout.widget.Guideline
@@ -92,13 +92,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="id"
+        android:theme="@style/MyTextInputLayoutStyle"
         app:boxBackgroundMode="outline"
-        app:boxCornerRadiusBottomEnd="4dp"
-        app:boxCornerRadiusBottomStart="4dp"
-        app:boxCornerRadiusTopEnd="4dp"
-        app:boxCornerRadiusTopStart="4dp"
-        app:boxStrokeColor="#FFC400"
-        app:hintEnabled="true"
         app:hintTextAppearance="@style/MyHintStyle"
         app:layout_constraintEnd_toStartOf="@+id/guideline_login_right"
         app:layout_constraintStart_toStartOf="@+id/guideline_login_left"
@@ -110,11 +105,8 @@
             android:id="@+id/tiet_login_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#00FFFFFF"
             android:inputType="text"
-            android:padding="10dp"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="12sp"
+            android:textColor="#aaa"
             android:theme="@style/MyEditTextStyle"
             tools:layout_conversion_absoluteHeight="45dp"
             tools:layout_conversion_absoluteWidth="411dp"
@@ -128,14 +120,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:hint="password"
+        android:theme="@style/MyTextInputLayoutStyle"
         app:boxBackgroundMode="outline"
-        app:boxCornerRadiusBottomEnd="4dp"
-        app:boxCornerRadiusBottomStart="4dp"
-        app:boxCornerRadiusTopEnd="4dp"
-        app:boxCornerRadiusTopStart="4dp"
-        app:boxStrokeColor="#FFC400"
-        app:hintAnimationEnabled="true"
-        app:hintEnabled="true"
         app:hintTextAppearance="@style/MyHintStyle"
         app:layout_constraintEnd_toStartOf="@+id/guideline_login_right"
         app:layout_constraintStart_toStartOf="@+id/guideline_login_left"
@@ -147,12 +133,9 @@
             android:id="@+id/tiet_login_pw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#00FFFFFF"
             android:inputType="textPassword"
-            android:padding="10dp"
             android:singleLine="true"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="12sp"
+            android:textColor="#aaa"
             android:theme="@style/MyEditTextStyle"
             tools:layout_conversion_absoluteHeight="45dp"
             tools:layout_conversion_absoluteWidth="411dp"
@@ -165,6 +148,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:theme="@style/MyEditTextStyle"
         app:layout_constraintGuide_end="10dp" />
 
     <Button
