-u SingUpFragment - 공통 옵션 -> style로 통합 | 디자인 수정

--- a/client/app/src/main/res/layout/fragment_sign_up.xml
+++ b/client/app/src/main/res/layout/fragment_sign_up.xml
@@ -92,10 +92,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="name"
-        app:errorEnabled="false"
-        app:helperTextEnabled="false"
-        app:hintAnimationEnabled="true"
+        android:theme="@style/MyTextInputLayoutStyle"
+        app:boxBackgroundMode="outline"
         app:hintEnabled="true"
+        app:hintTextAppearance="@style/MyHintStyle"
         app:layout_constraintEnd_toStartOf="@+id/guideline_signup_right"
         app:layout_constraintStart_toStartOf="@+id/guideline_signup_left"
         app:layout_constraintTop_toTopOf="@+id/guideline_signup_body"
@@ -107,7 +107,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
-            android:textSize="14sp"
+            android:textColor="#aaa"
+            android:theme="@style/MyEditTextStyle"
             tools:layout_conversion_absoluteHeight="45dp"
             tools:layout_conversion_absoluteWidth="411dp"
             tools:layout_editor_absoluteX="0dp"
@@ -118,11 +119,11 @@
         android:id="@+id/til_signup_id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:hint="id"
-        app:errorEnabled="false"
-        app:helperTextEnabled="false"
-        app:hintAnimationEnabled="true"
-        app:hintEnabled="true"
+        android:theme="@style/MyTextInputLayoutStyle"
+        app:boxBackgroundMode="outline"
+        app:hintTextAppearance="@style/MyHintStyle"
         app:layout_constraintEnd_toStartOf="@+id/guideline_signup_right"
         app:layout_constraintStart_toStartOf="@+id/guideline_signup_left"
         app:layout_constraintTop_toBottomOf="@+id/til_signup_name"
@@ -134,7 +135,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
-            android:textSize="14sp"
+            android:textColor="#aaa"
+            android:theme="@style/MyEditTextStyle"
             tools:layout_conversion_absoluteHeight="45dp"
             tools:layout_conversion_absoluteWidth="411dp"
             tools:layout_editor_absoluteX="0dp"
@@ -145,11 +147,11 @@
         android:id="@+id/til_signup_pw"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:hint="password"
-        app:errorEnabled="false"
-        app:helperTextEnabled="false"
-        app:hintAnimationEnabled="true"
-        app:hintEnabled="true"
+        android:theme="@style/MyTextInputLayoutStyle"
+        app:boxBackgroundMode="outline"
+        app:hintTextAppearance="@style/MyHintStyle"
         app:layout_constraintEnd_toStartOf="@+id/guideline_signup_right"
         app:layout_constraintStart_toStartOf="@+id/guideline_signup_left"
         app:layout_constraintTop_toBottomOf="@+id/til_signup_id"
@@ -162,7 +164,8 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:singleLine="true"
-            android:textSize="14sp"
+            android:textColor="#aaa"
+            android:theme="@style/MyEditTextStyle"
             tools:layout_conversion_absoluteHeight="45dp"
             tools:layout_conversion_absoluteWidth="411dp"
             tools:layout_editor_absoluteX="0dp"
@@ -173,11 +176,11 @@
         android:id="@+id/til_signup_refeat_pw"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:hint="repeat password"
-        app:errorEnabled="false"
-        app:helperTextEnabled="false"
-        app:hintAnimationEnabled="true"
-        app:hintEnabled="true"
+        android:theme="@style/MyTextInputLayoutStyle"
+        app:boxBackgroundMode="outline"
+        app:hintTextAppearance="@style/MyHintStyle"
         app:layout_constraintEnd_toStartOf="@+id/guideline_signup_right"
         app:layout_constraintStart_toStartOf="@+id/guideline_signup_left"
         app:layout_constraintTop_toBottomOf="@+id/til_signup_pw"
@@ -190,7 +193,8 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:singleLine="true"
-            android:textSize="14sp"
+            android:textColor="#aaa"
+            android:theme="@style/MyEditTextStyle"
             tools:layout_conversion_absoluteHeight="45dp"
             tools:layout_conversion_absoluteWidth="411dp"
             tools:layout_editor_absoluteX="0dp"
@@ -201,11 +205,11 @@
         android:id="@+id/til_signup_phone"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:hint="phone"
-        app:errorEnabled="false"
-        app:helperTextEnabled="false"
-        app:hintAnimationEnabled="true"
-        app:hintEnabled="true"
+        android:theme="@style/MyTextInputLayoutStyle"
+        app:boxBackgroundMode="outline"
+        app:hintTextAppearance="@style/MyHintStyle"
         app:layout_constraintEnd_toStartOf="@+id/guideline_signup_right"
         app:layout_constraintStart_toStartOf="@+id/guideline_signup_left"
         app:layout_constraintTop_toBottomOf="@+id/til_signup_refeat_pw"
@@ -218,7 +222,8 @@
             android:layout_height="wrap_content"
             android:inputType="text|textPassword|phone"
             android:singleLine="true"
-            android:textSize="14sp"
+            android:textColor="#aaa"
+            android:theme="@style/MyEditTextStyle"
             tools:layout_conversion_absoluteHeight="45dp"
             tools:layout_conversion_absoluteWidth="411dp"
             tools:layout_editor_absoluteX="0dp"
