--- a/client/app/src/main/res/values/styles.xml
+++ b/client/app/src/main/res/values/styles.xml
@@ -8,6 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MyTextInputLayoutStyle" parent="Widget.Design.TextInputLayout">
+        <item name="boxCornerRadiusBottomEnd">4dp</item>
+        <item name="boxCornerRadiusBottomStart">4dp</item>
+        <item name="boxCornerRadiusTopEnd">4dp</item>
+        <item name="boxCornerRadiusTopStart">4dp</item>
+        <item name="boxStrokeColor">#FFC400</item>
+        <item name="hintEnabled">true</item>
+    </style>
+
     <style name="MyHintStyle" parent="TextAppearance.AppCompat.Small">
         <item name="android:textColor">#FFC400</item>
         <item name="android:textSize">10sp</item>
@@ -15,6 +24,9 @@
 
     <style name="MyEditTextStyle" parent="Theme.AppCompat.NoActionBar">
         <item name="colorAccent">#FFC400</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#aaa</item>
+        <item name="android:padding">10dp</item>
     </style>
 
 </resources>
