BottomNavigation 속성 추가

--- a/client/app/src/main/res/layout/fragment_detail.xml
+++ b/client/app/src/main/res/layout/fragment_detail.xml
@@ -9,7 +9,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_detail"
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="wrap_content"
         android:background="#FFC400"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
@@ -325,7 +325,7 @@
     <Button
         android:id="@+id/btn_detail_reservate"
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="wrap_content"
         android:background="#FFC400"
         android:fontFamily="sans-serif-black"
         android:text="예약하기"
