--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#ddd</color>
+    <color name="colorDivider">#BDBDBD</color>
 </resources>
